--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.1.11
   uni_links: ^0.5.1
   crypto: ^3.0.6
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
